# lowatt-enedis

./: .flake8  .pre-commit-config.yaml  .yamllint.yml  COPYING  MANIFEST.in  README.md  hatch.toml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  tox.yml
doc/: ConsultationDonneesTechniquesContractuellesV1.0 - Regles filtrage ICS_v1.0.0.xlsx  homologation.md  homologation.sh
lowatt_enedis/: __init__.py  __main__.py  certauth.py  decrypt.py  services.py
lowatt_enedis/wsdl/AccesDonneesOptionPublication/Services/CommandeArretServicesAccesDonnees/: CommanderArretServicesAccesDonnees-V1.0.wsdl
lowatt_enedis/wsdl/AccesDonneesOptionPublication/Services/CommandeModificationOptionsServicesAccesDonnees/: CommanderModificationOptionsServicesAccesDonnees-V1.0.wsdl
lowatt_enedis/wsdl/AccesDonneesOptionPublication/Services/CommandeRenouvellementServicesAccesDonnees/: CommanderRenouvellementServicesAccesDonnees-V1.0.wsdl
lowatt_enedis/wsdl/AccesDonneesOptionPublication/Services/CommandeServicesAccesDonnees/: CommanderServicesAccesDonnees-V1.0.wsdl
lowatt_enedis/wsdl/AccesDonneesOptionPublication/xsd/: CommanderArretServicesAccesDonnees-V1.0.xsd  CommanderModificationOptionsServicesAccesDonnees-V1.0.xsd  CommanderRenouvellementServicesAccesDonnees-V1.0.xsd  CommanderServicesAccesDonnees-V1.0.xsd
lowatt_enedis/wsdl/CommandeAccesDonneesMesures/Services/CommanderAccesDonneesMesures/: CommanderAccesDonneesMesures-V1.0.wsdl  CommanderAccesDonneesMesures-V1.0.xsd  ENEDIS.Dictionnaire.TypeComplexe.v5.0.xsd
lowatt_enedis/wsdl/CommandeArretServiceSouscritMesures/Dictionnaires/Technique/: W3C.SoapEnv.xsd
lowatt_enedis/wsdl/CommandeArretServiceSouscritMesures/Services/CommandeArretServiceSouscritMesures/: CommanderArretServiceSouscritMesures-v1.0.xsd
lowatt_enedis/wsdl/CommandeCollectePublicationMesures/Dictionnaires/Metier/v5.0/: ENEDIS.Dictionnaire.TypeComplexe.v5.0.xsd  ENEDIS.Dictionnaire.TypeSimple.v5.0.xsd
lowatt_enedis/wsdl/CommandeCollectePublicationMesures/Dictionnaires/Technique/v1.0/: ENEDIS.Dictionnaire.Technique.v1.0.xsd
lowatt_enedis/wsdl/CommandeTransmissionDonneesInfraJ/Dictionnaires/Metier/v5.0/: ENEDIS.Dictionnaire.TypeComplexe.v5.0.xsd  ENEDIS.Dictionnaire.TypeSimple.v5.0.xsd
lowatt_enedis/wsdl/CommandeTransmissionDonneesInfraJ/Services/CommandeTransmissionDonneesInfraJ/: CommandeTransmissionDonneesInfraJ-v1.0.wsdl  CommanderTransmissionDonneesInfraJ-v1.0.xsd
lowatt_enedis/wsdl/ConsultationDonneesTechniquesContractuelles/Services/ConsultationDonneesTechniquesContractuelles/: ConsulterDonneesTechniquesContractuelles-v1.0.xsd
lowatt_enedis/wsdl/ConsultationMesures/Dictionnaires/Metier/v5.0/: ENEDIS.Dictionnaire.TypeComplexe.v5.0.xsd  ENEDIS.Dictionnaire.TypeSimple.v5.0.xsd
lowatt_enedis/wsdl/ConsultationMesures/Dictionnaires/Technique/v1.0/: ENEDIS.Dictionnaire.Technique.v1.0.xsd
lowatt_enedis/wsdl/ConsultationMesures/Services/ConsultationMesures/: ConsultationMesures-v1.1.wsdl  ConsulterMesures-v1.1.xsd
lowatt_enedis/wsdl/ConsultationMesuresDetaillees/: ConsultationMesuresDetaillees-v2.0.wsdl  ConsulterMesuresDetaillees-v2.0.1.xsd
lowatt_enedis/wsdl/ConsultationMesuresDetailleesV3/: ADAM.ConsulterMesuresDetailleesCommun.xsd  ADAM.ConsulterMesuresServiceReadV3.wsdl
lowatt_enedis/wsdl/M023_v1.2.0/Services/CommandeHistoriqueDonneesMesuresFacturantes/: B2B_M023MFA.wsdl
lowatt_enedis/wsdl/M023_v1.2.0/Services/CommandeInformationsTechniquesEtContractuelles/: B2B_M023ITC.wsdl
lowatt_enedis/wsdl/M023_v1.2.0/xsd/m023/: ITCModel.xsd  MesuresFacturantesModel.xsd  MesuresFinesModel.xsd
lowatt_enedis/wsdl/M023_v1.2.0/xsd/transverse/: ENEDIS.Dictionnaire.Technique.v1.0.xsd
lowatt_enedis/wsdl/RecherchePoint/Dictionnaires/Technique/: ENEDIS.Dictionnaire.Technique.v1.0.xsd
lowatt_enedis/wsdl/RecherchePoint/Dictionnaires/v5.0/: ENEDIS.Dictionnaire.TypeSimple.v5.0.xsd
lowatt_enedis/wsdl/RecherchePoint/Services/RecherchePoint/: RecherchePoint-v2.0.wsdl  RechercherPoint-v2.0.xsd
lowatt_enedis/wsdl/RechercheServicesAccesDonnees/Services/: RechercherServicesAccesDonnees-V1.0.1.wsdl
lowatt_enedis/wsdl/RechercheServicesAccesDonnees/xsd/: RechercherServicesAccesDonnees-V1.0.1.xsd
lowatt_enedis/wsdl/RechercheServicesAccesDonnees/xsd/Dictionnaires/Metier/: ENEDIS.Dictionnaire.TypeSimple.v5.0.xsd
lowatt_enedis/wsdl/RechercheServicesAccesDonnees/xsd/Dictionnaires/Technique/: ENEDIS.Dictionnaire.Technique.v1.0.xsd
lowatt_enedis/wsdl/RechercheServicesSouscritsMesures/Services/RechercheServicesSouscritsMesures/: RechercherServicesSouscritsMesures-v1.0.xsd
lowatt_enedis/wsdl/TransmissionHistoriqueMesures/Dictionnaires/v4.0/: ERDF.Dictionnaire.TypeComplexe.v4.0.xsd  ERDF.Dictionnaire.TypeSimple.v4.0.xsd
lowatt_enedis/wsdl/TransmissionHistoriqueMesures/Services/TransmissionHistoriqueMesures/: CommandeTransmissionHistoriqueMesures-v1.0.wsdl  CommanderTransmissionHistoriqueMesures-v1.0.xsd
test/: conftest.py  test_cli.py  test_decrypt.py  test_lowatt_enedis.py  test_requests.py
test/data/: consulterMesuresDetailleesResponse.xml  consulterMesuresResponse.xml  expected-cli-output.yml  requests.yaml
