[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lowatt-enedis"
description = "Python client for Enedis SGE web-service"
readme = "README.md"
license = { text = "GPLv3" }
authors = [{ name = "Lowatt", email = "info@lowatt.fr" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving :: Mirroring",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "certifi",
    "suds-py3",
    "rich",
]

[project.urls]
Source = "https://github.com/lowatt/lowatt-enedis"
Tracker = "https://github.com/lowatt/lowatt-enedis/issues"

[project.optional-dependencies]
cryptography = [
    "cryptography", # required for lowatt-enedis decrypt
]
test = [
    "pytest",
    "pytest-accept",
    "pytest-cov",
    "lxml",
    "freezegun",
    "pyyaml",
]
typing = [
    "mypy",
    "types-freezegun",
    "types-PyYAML",
]

[project.scripts]
lowatt-enedis = "lowatt_enedis.__main__:run"
