[metadata]
name = lowatt_enedis
version = 0.1
description = Query Enedis SGE web-service
long_description = Command-line interface to query Enedis SGE SOAP web-service.
author = Sylvain Thénault
author_email = info@lowatt.fr
url = https://github.com/lowatt/lowatt_enedis
license = GPL3
classifiers =
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Topic :: System :: Archiving :: Mirroring

[options]
python_requires = >=3.7
packages = find:
install_requires =
    python-dateutil
    suds-py3
include_package_data = True

[options.entry_points]
console_scripts =
    lowatt-enedis = lowatt_enedis.__main__:run
