[metadata]
name = lowatt-enedis
description = Query Enedis SGE web-service
long_description = file:README.md
long_description_content_type = text/markdown
author = Lowatt
author_email = info@lowatt.fr
url = https://github.com/lowatt/lowatt-enedis
license = GPL3
classifiers =
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Topic :: System :: Archiving :: Mirroring
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
setup_requires =
    setuptools_scm
python_requires = >=3.7
packages = find:
install_requires =
    python-dateutil
    suds-py3
    typing-extensions
include_package_data = True

[options.extras_require]
test =
    pytest
    pytest-cov
    lxml
    freezegun
    pyyaml
typing =
    mypy
    types-python-dateutil
    types-setuptools
    types-freezegun
    types-PyYAML

[options.entry_points]
console_scripts =
    lowatt-enedis = lowatt_enedis.__main__:run
